Removes gross outline from buttons, adds :focus bg color, and resolves overlapping issue if the user changes settings too quickly after saving them

--- a/styles/global.css
+++ b/styles/global.css
@@ -43,6 +43,11 @@ button, button[type="submit"], input[type="submit"], .button {
     @apply rounded;
 }
 
+button:focus, button[type="submit"]:focus, input[type="submit"]:focus, .button:focus {
+  outline: none;
+  @apply bg-purple-900;
+}
+
 button:hover, button[type="submit"]:hover, input[type="submit"]:hover {
     @apply bg-purple-700;
 }
